--- a/src/index.html
+++ b/src/index.html
@@ -18,6 +18,6 @@
     </div>
   </body> 
   <script src="https://www.youtube.com/iframe_api"></script>
-  <script src="scripts/true-youtube-shuffle.js"></script> 
-  <link rel="stylesheet" href="styles/true-youtube-shuffle.css">
+  <script src="scripts/index.js"></script> 
+  <link rel="stylesheet" href="styles/index.css">
 </html>
